# lmgtfy

./: .env.example  Cargo.toml  Dockerfile  README.md  compose.yaml
alerting-dlq/: Cargo.toml
alerting-dlq/src/: main.rs
common/: Cargo.toml
common/src/: dto.rs  lib.rs
common/src/queue/: kafka.rs  mod.rs  pgmq.rs
email-sim/: Cargo.toml
email-sim/src/: main.rs
email-trt/: Cargo.toml
email-trt/src/: main.rs
labelize-ticket-trt/: Cargo.toml
labelize-ticket-trt/src/: main.rs
ops/: compose.yaml
ticket-storage/: Cargo.toml
ticket-storage/src/: main.rs
whatsapp-sim/: Cargo.toml
whatsapp-sim/src/: main.rs
whatsapp-trt/: Cargo.toml
whatsapp-trt/src/: main.rs
