[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.102"
pgmq = "0.32.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
rdkafka = "0.36"
futures = "0.3"
uuid = { version = "1.0", features = ["v4"] }
tokio = { version = "1.0", features = ["full"] }
