[package]
name = "email-trt"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
pgmq = "0.32.0"
serde = "1.0.228"
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["rt-multi-thread"] }
clap = { version = "4.5.6", features = ["derive"] }
anyhow = "1.0.102"
futures = "0.3.32"
